--- a/wear/src/main/res/layout/sound_profile_list_item.xml
+++ b/wear/src/main/res/layout/sound_profile_list_item.xml
@@ -4,6 +4,11 @@
     android:gravity="center_vertical"
     android:layout_width="match_parent"
     android:layout_height="80dp">
+    <ImageView
+        android:id="@+id/profile_image"
+        android:layout_height="30dp"
+        android:layout_margin="16dp"
+        android:layout_width="30dp"/>
     <TextView
         android:id="@+id/profile_name"
         android:gravity="center_vertical|left"
@@ -13,5 +18,5 @@
         android:fontFamily="sans-serif-condensed-light"
         android:lineSpacingExtra="-4sp"
         android:textColor="@color/text_color"
-        android:textSize="16sp"/>
+        android:textSize="18sp"/>
 </eu.tobiasheine.wearcontrol.SoundProfileListItem>
