--- a/wear/src/main/res/layout/wear_activity_control.xml
+++ b/wear/src/main/res/layout/wear_activity_control.xml
@@ -15,7 +15,6 @@
         <android.support.wearable.view.WearableListView
             android:id="@+id/sound_profiles_list"
             android:layout_height="match_parent"
-            android:layout_width="match_parent">
-        </android.support.wearable.view.WearableListView>
+            android:layout_width="match_parent"/>
     </FrameLayout>
 </android.support.wearable.view.BoxInsetLayout>
