--- a/wear/src/main/res/layout/wear_activity_control.xml
+++ b/wear/src/main/res/layout/wear_activity_control.xml
@@ -1,20 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.wearable.view.BoxInsetLayout
+<android.support.wearable.view.WatchViewStub
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/watch_view_stub"
     android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    app:rectLayout="@layout/rect_wear_activity_control"
+    app:roundLayout="@layout/round_wear_activity_control"
+    tools:context=".WearActivity"
+    tools:deviceIds="wear"
     android:background="@color/white">
-
-    <FrameLayout
-        android:id="@+id/frame_layout"
-        android:layout_height="match_parent"
-        android:layout_width="match_parent"
-        app:layout_box="left|bottom|right">
-
-        <android.support.wearable.view.WearableListView
-            android:id="@+id/sound_profiles_list"
-            android:layout_height="match_parent"
-            android:layout_width="match_parent"/>
-    </FrameLayout>
-</android.support.wearable.view.BoxInsetLayout>
+</android.support.wearable.view.WatchViewStub>
