--- a/wear/src/main/res/layout/sound_profile_list_item.xml
+++ b/wear/src/main/res/layout/sound_profile_list_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<eu.tobiasheine.wearcontrol.SoundProfileListItem
+<eu.tobiasheine.wearcontrol.ui.SoundProfileListItem
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:gravity="center_vertical"
     android:layout_width="match_parent"
@@ -19,4 +19,4 @@
         android:lineSpacingExtra="-4sp"
         android:textColor="@color/text_color"
         android:textSize="18sp"/>
-</eu.tobiasheine.wearcontrol.SoundProfileListItem>
+</eu.tobiasheine.wearcontrol.ui.SoundProfileListItem>
